--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
             content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
         />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="BFarm Admin Panel" />
+        <meta name="description" content="BFarmX Inspector" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-        <title>BFarm Inspecting</title>
+        <title>BFarmX Inspector</title>
     </head>
     <body>
         <noscript>
